--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,10 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel=”shortcut icon” href=”%PUBLIC_URL%/favicon.ico”>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="logo192.png" />
   <link href="https://fonts.googleapis.com/css?family=Arsenal|Cinzel&display=swap" rel="stylesheet">
 
   <!--
@@ -24,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>Vineo</title>
 </head>
 
 <body>
